# toy-db

./: .gitignore  CMakeLists.txt
src/: main.c
src/spec/: main_spec.rb
